Release history for lib-byversion

{{$NEXT}}

0.002001 2015-08-18T04:35:32Z fb6ecb3
 [Metadata]
 - CPAN.com? What planet is this?
 - Author fixed to be @cpan.org

0.002000 2015-08-18T03:45:00Z dc0f081
 [01 - Installer Changed]
 - Installer now migrated to use ExtUtils::MakeMaker
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - build: -1
 - configure: +2 -1 (recommends: +1)
 - develop: +24 ↑2 -14 (recommends: +1, suggests: +2 -1)
 - test: +3 ↓1 (recommends: +3)

 [Tests]
 - More test coverage

0.001001 2013-11-20T06:54:37Z
 [00 Bugfix]
 - Fix test failing on <5.10

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +45 -1 (recommends: -1, suggests: +1 -1)
 - runtime: +1
 - test: ↑1 -2

 [Packaging]
 - use Module::Build test_requires
 - use new fallback code

 [Tests]
 - use Test::Compile::PerFile instead of Test::Compile
 - Regen ReportVersions::Tiny to hide devel prereqs
 - Regen Test::CPAN::Changes
 - Regen Test::Kwaltiee

0.001000 2013-02-15T21:10:15Z
 - First version.