@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.039.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -26,7 +26,7 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "0.002002",
   "test" => {
@@ -39,7 +39,7 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "String::Formatter" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "lib" => 0,
   "strict" => 0,
   "version" => "0.77",
