@@ -98,11 +98,11 @@ I bloat it out with features nobody will ever use.
 
 # AUTHOR
 
-Kent Fredric &lt;kentnl@cpan.org>
+Kent Fredric <kentnl@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2015 by Kent Fredric &lt;kentfredric@gmail.com>.
+This software is copyright (c) 2017 by Kent Fredric <kentfredric@gmail.com>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
