@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002002
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.002001 2015-08-18T04:35:32Z
 
