@@ -1,6 +1,10 @@
 Release history for lib-byversion
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002001, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑2)
+ - test: ↓1
 
 0.002001 2015-08-18T04:35:32Z fb6ecb3
  [Metadata]
